[package]
name = "radrootsd"
version = "0.1.0"
edition = "2024"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version = "1.92.0"
license = "AGPL-3.0"
description = "Radroots daemon binary"

[workspace]
resolver = "2"

[workspace.dependencies]
radroots_core = { path = "../../../../foundation/libs/rs/radroots/crates/core" }
radroots_events = { path = "../../../../foundation/libs/rs/radroots/crates/events" }
radroots_events_codec = { path = "../../../../foundation/libs/rs/radroots/crates/events_codec" }
radroots_identity = { path = "../../../../foundation/libs/rs/radroots/crates/identity" }
radroots_nostr = { path = "../../../../foundation/libs/rs/radroots/crates/nostr" }
radroots_nostr_signer = { path = "../../../../foundation/libs/rs/radroots/crates/nostr_signer" }
radroots_runtime = { path = "../../../../foundation/libs/rs/radroots/crates/runtime" }
radroots_trade = { path = "../../../../foundation/libs/rs/radroots/crates/trade" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
radroots_core = { workspace = true, features = ["std", "serde", "typeshare"]  }
radroots_events = { workspace = true, features = ["serde"] }
radroots_events_codec = { workspace = true, features = ["nostr", "serde_json"] }
radroots_identity = { workspace = true }
radroots_nostr = { workspace = true, features = ["client", "codec", "events", "http"] }
radroots_nostr_signer = { workspace = true }
radroots_runtime = { workspace = true, features = ["cli"] }
radroots_runtime_paths = { path = "../../../../foundation/libs/rs/radroots/crates/runtime_paths" }
radroots_trade = { workspace = true }
nostr = { version = "0.44.2", features = ["nip46"] }

anyhow = { version = "1" }
clap = { version = "4", features = ["derive"] }
jsonrpsee = { version = "0.26", features = ["server"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
serde_qs = { version = "1.0" }
sha2 = { version = "0.10" }
tokio = { version = "1", features = ["full"] }
thiserror = { version = "2" }
tower = { version = "0.5.3", features = ["util"] }
tracing = { version = "0.1" }
uuid = { version = "1.22.0", features = ["v4"] }
url = { version = "2.5.8" }

[dev-dependencies]
tempfile = { version = "3" }
