[package]
name = "radrootsd"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true
description = "The radroots daemon binary"

[dependencies]
radroots-core = { workspace = true, features = ["std", "serde", "typeshare"] }
radroots-events = { workspace = true, features = ["serde"] }
radroots-events-codec = { workspace = true, features = ["nostr"] }
radroots-runtime = { workspace = true, features = ["cli"] }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"]}
jsonrpsee = { workspace = true, features = ["server"]  }
nostr = { workspace = true }
nostr-sdk = { workspace = true }
reqwest = { workspace = true, features = ["json"]  }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
